--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dependencies": {
         "axios": "^1.6.7",
         "nuxt-simple-sitemap": "^4.4.1",
+        "photoswipe": "^5.2.2",
+        "photoswipe-dynamic-caption-plugin": "^1.1.1",
         "vue-gtag": "^2.0.1"
     }
 }
