--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "photoswipe": "^5.2.2",
         "photoswipe-dynamic-caption-plugin": "^1.1.1",
         "qs": "^6.11.2",
-        "vue-gtag": "^2.0.1"
+        "vue-gtag": "^2.0.1",
+        "pinia": "^2.1.6"
     }
 }
